Updates of several dependencies and adding of JEGens.